Zamenjen Collectors.toList() sa Stream.toList().